tests/__snapshots__/validation-import-module-is-not-found-stderr.snap.txt
Error: The specified module 'not-found' was not found.

  2 |   "import": [
  3 |     "ts-blank-space/register",
  4 |     "not-found",
    |     ~~~~~~~~~~~
  5 |     "./not-found.js"
  6 |   ],
  7 |   "testFileMatch": [

      at ./tstyche.config.json:4:5

Error: The specified module '<<baseUrl>>/tests/__fixtures__/.generated/validation-import/not-found.js' was not found.

  3 |     "ts-blank-space/register",
  4 |     "not-found",
  5 |     "./not-found.js"
    |     ~~~~~~~~~~~~~~~~
  6 |   ],
  7 |   "testFileMatch": [
  8 |     "examples/*.tst.*"

      at ./tstyche.config.json:5:5

